--- a/package.json
+++ b/package.json
@@ -6,23 +6,30 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "slicemachine": "start-slicemachine"
   },
   "dependencies": {
     "@chakra-ui/react": "^2.2.8",
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
+    "@prismicio/client": "^6.7.0",
+    "@prismicio/helpers": "^2.3.3",
+    "@prismicio/next": "^0.1.3",
+    "@prismicio/react": "^2.5.0",
+    "@prismicio/slice-simulator-react": "^0.2.2",
     "axios": "^0.27.2",
     "framer-motion": "^7.2.0",
     "next": "12.2.5",
+    "prismic-dom": "^2.2.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
-    "react-indiana-drag-scroll": "^2.2.0",
-    "react-markdown": "^8.0.3"
+    "react-indiana-drag-scroll": "^2.2.0"
   },
   "devDependencies": {
     "@types/node": "18.7.8",
+    "@types/prismic-dom": "^2.1.1",
     "@types/react": "18.0.17",
     "@types/react-dom": "18.0.6",
     "eslint": "8.22.0",
@@ -30,6 +37,7 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
     "prettier": "^2.7.1",
+    "slice-machine-ui": "^0.4.2",
     "typescript": "4.7.4"
   }
 }
