--- a/package.json
+++ b/package.json
@@ -25,13 +25,15 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
-    "react-indiana-drag-scroll": "^2.2.0"
+    "react-indiana-drag-scroll": "^2.2.0",
+    "react-lottie": "^1.2.3"
   },
   "devDependencies": {
     "@types/node": "18.7.8",
     "@types/prismic-dom": "^2.1.1",
     "@types/react": "18.0.17",
     "@types/react-dom": "18.0.6",
+    "@types/react-lottie": "^1.2.6",
     "eslint": "8.22.0",
     "eslint-config-next": "12.2.5",
     "eslint-config-prettier": "^8.5.0",
